# sw2303-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: build.yml
docs/: SW2303_寄存器手册__Release_RG013_1_v1.4.md
src/: data_types.rs  driver.rs  error.rs  lib.rs  registers.rs
tests/: power_and_fast_charge_tests.rs  protocol_configuration_tests.rs
